# pyTaskBook

./: .pre-commit-config.yaml  README.md  config.py  pyproject.toml
qparser/: __init__.py  __main__.py  base_parser.py  word_parser.py
